Updates (#90)
* Updates
- removed explicit pinning of jacoco-maven-plugin to v0.8.8 as it seems using latest version is working
- Added maven-failsafe-plugin to a build section in the payara-server-embedded maven profile which defines an argLine providing
  JVM parameters necessary for Payara5+Hazelcast for running integration tests
- Added a NOTES.md file with details on integration tests and the necessary JVM arguments for integration tests

Signed-off-by: Phillip Ross <phillip.w.g.ross@gmail.com>

* Updates
- updated CI maven from v3.9.5 to v3.9.6
- updated CI zulu from v8.0.382/v11.0.20 to v8.0.392/v11.0.21/v17.0.9
- added payara-server-embedded-no-jpms maven profile which mirrors payara-server-embedded excluding failsafe JVM argLine

Signed-off-by: Phillip Ross <phillip.w.g.ross@gmail.com>

---------

Signed-off-by: Phillip Ross <phillip.w.g.ross@gmail.com>